src/objects/c2g__codaIntegrationRule__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpintegratioruledef</customHelpPage>
    <description>Defines an integration rule at header level.</description>
    <fields>
        <fullName>c2g__AdditionalTargetDetailObject__c</fullName>
        <label>Additional Target Detail Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payable Credit Note Line Item</fullName>
                </value>
                <value>
                    <fullName>Payable Invoice Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__MultiLineCashEntry__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Multi-Line Cash Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessedIndicator__c</fullName>
        <label>Processed Indicator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RelationshipSourceField__c</fullName>
        <label>Relationship Source Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RelationshipTargetField__c</fullName>
        <label>Relationship Target Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDetailObject__c</fullName>
        <label>Source Detail Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SourceObject__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TargetDetailObject__c</fullName>
        <label>Target Detail Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Entry Line Item</fullName>
                </value>
                <value>
                    <fullName>Journal Line Item</fullName>
                </value>
                <value>
                    <fullName>Payable Credit Note Expense Line Item</fullName>
                </value>
                <value>
                    <fullName>Payable Invoice Expense Line Item</fullName>
                </value>
                <value>
                    <fullName>Sales Credit Note Line Item</fullName>
                </value>
                <value>
                    <fullName>Sales Invoice Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TargetObject__c</fullName>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget and Balance</fullName>
                </value>
                <value>
                    <fullName>Cash Entry</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Payable Credit Note</fullName>
                </value>
                <value>
                    <fullName>Payable Invoice</fullName>
                </value>
                <value>
                    <fullName>Sales Credit Note</fullName>
                </value>
                <value>
                    <fullName>Sales Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Rule</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__TargetObject__c</columns>
        <columns>c2g__SourceObject__c</columns>
        <columns>c2g__TargetDetailObject__c</columns>
        <columns>c2g__SourceDetailObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>